# InfiniTAM

./: .gitignore  README.md
InfiniTAM/: CMakeLists.txt  mesh.stl
InfiniTAM/Engine/: CMakeLists.txt  UIEngine.cpp
InfiniTAM/ITMLib/: CMakeLists.txt
InfiniTAM/ORUtils/: CMakeLists.txt
InfiniTAM/Utils/: CMakeLists.txt
InfiniTAM/cmake/: FindOpenNI.cmake  SetUninstallTarget.cmake
InfiniTAM/doxygen-html/: CLIEngine_8cpp.html  CLIEngine_8h.html  CLIEngine_8h_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CUDADefines_8h.html  CUDADefines_8h_source.html  Cholesky_8h.html  Cholesky_8h_source.html  DeviceAgnostic_2ITMColorTracker_8h.html  DeviceAgnostic_2ITMColorTracker_8h_source.html  DeviceAgnostic_2ITMDepthTracker_8h.html  DeviceAgnostic_2ITMDepthTracker_8h_source.html  DeviceAgnostic_2ITMLowLevelEngine_8h.html  DeviceAgnostic_2ITMLowLevelEngine_8h_source.html  DeviceAgnostic_2ITMMeshingEngine_8h.html  DeviceAgnostic_2ITMMeshingEngine_8h_source.html  DeviceAgnostic_2ITMRenTracker_8h.html  DeviceAgnostic_2ITMRenTracker_8h_source.html  DeviceAgnostic_2ITMSceneReconstructionEngine_8h.html  DeviceAgnostic_2ITMSceneReconstructionEngine_8h_source.html  DeviceAgnostic_2ITMSwappingEngine_8h.html  DeviceAgnostic_2ITMSwappingEngine_8h_source.html  DeviceAgnostic_2ITMViewBuilder_8h.html  DeviceAgnostic_2ITMViewBuilder_8h_source.html  DeviceAgnostic_2ITMVisualisationEngine_8h.html  DeviceAgnostic_2ITMVisualisationEngine_8h_source.html  DeviceAgnostic_2ITMWeightedICPTracker_8h.html  DeviceAgnostic_2ITMWeightedICPTracker_8h_source.html  Dummy_8cpp.html  (+694 more)
(+80 files in other folders)
